tests/outref/TCT018.ref
# Run queries from TCT018.sql (expected to run without any errors). Cross check output of Octo against Postgres
# Run queries that are expected to error out. Cross check against reference file

-- TCT018 : OCTO636 : SIZE specified in the NUMERIC type of the typecast operator (::) should be honored

-- All below queries produce errors

-- Test of ERR_NUMERIC_SCALE
CREATE TABLE abcd(id NUMERIC(3,4));
SELECT 1.50::numeric(2,3);
SELECT -1.50::numeric(2,3);

-- Test of syntax error
CREATE TABLE abcd(id NUMERIC(3,-1));	-- negative scale is not allowed
SELECT 1.50::INTEGER(2,3);		-- scale parameter is not allowed for INTEGER
SELECT -1.50::INTEGER(2,3);		-- scale parameter is not allowed for INTEGER

-- Test of ERR_INVALID_INTEGER_SYNTAX
CREATE TABLE abcd(id NUMERIC(3,0.5));

-- Test of ERR_NUMERIC_OVERFLOW
SELECT 1495::NUMERIC(2);
SELECT -1495::NUMERIC(2);
SELECT 1.49::NUMERIC(0);
SELECT 15.54::NUMERIC(1);
SELECT 15.54::NUMERIC(0);
SELECT -1.49::NUMERIC(0);
SELECT -15.54::NUMERIC(1);
SELECT -15.54::NUMERIC(0);

[ERROR]: ERR_NUMERIC_SCALE: Numeric scale 4 must be between zero(0) and precision 3
LINE 1: CREATE TABLE abcd(id NUMERIC(3,4));
                                    ^^^^^
[ERROR]: ERR_NUMERIC_SCALE: Numeric scale 3 must be between zero(0) and precision 2
LINE 1: SELECT 1.50::numeric(2,3);
                            ^^^^^
[ERROR]: ERR_NUMERIC_SCALE: Numeric scale 3 must be between zero(0) and precision 2
LINE 1: SELECT -1.50::numeric(2,3);
                             ^^^^^
LINE 1: CREATE TABLE abcd(id NUMERIC(3,-1));	-- negative scale is not a...
                                       ^
syntax error, unexpected MINUS, expecting LITERAL
LINE 2: SELECT 1.50::INTEGER(2,3);		-- scale parameter is not allowed f...
                              ^
syntax error, unexpected COMMA, expecting RIGHT_PAREN
LINE 2: SELECT -1.50::INTEGER(2,3);		-- scale parameter is not allowed ...
                               ^
syntax error, unexpected COMMA, expecting RIGHT_PAREN
[ERROR]: ERR_INVALID_INTEGER_SYNTAX: Invalid input syntax for type integer: '0.5'
LINE 3: CREATE TABLE abcd(id NUMERIC(3,0.5));
                                       ^^^
[ERROR]: ERR_NUMERIC_OVERFLOW: Numeric field overflow; A field with precision 2, scale 0 must round to an absolute value less than 10^2
[ERROR]: ERR_NUMERIC_OVERFLOW: Numeric field overflow; A field with precision 2, scale 0 must round to an absolute value less than 10^2
[ERROR]: ERR_NUMERIC_OVERFLOW: Numeric field overflow; A field with precision 0, scale 0 must round to an absolute value less than 10^0
[ERROR]: ERR_NUMERIC_OVERFLOW: Numeric field overflow; A field with precision 1, scale 0 must round to an absolute value less than 10^1
[ERROR]: ERR_NUMERIC_OVERFLOW: Numeric field overflow; A field with precision 0, scale 0 must round to an absolute value less than 10^0
[ERROR]: ERR_NUMERIC_OVERFLOW: Numeric field overflow; A field with precision 0, scale 0 must round to an absolute value less than 10^0
[ERROR]: ERR_NUMERIC_OVERFLOW: Numeric field overflow; A field with precision 1, scale 0 must round to an absolute value less than 10^1
[ERROR]: ERR_NUMERIC_OVERFLOW: Numeric field overflow; A field with precision 0, scale 0 must round to an absolute value less than 10^0
